# identity

./: .dockerignore  .env.ci  .env.example  .gitignore  404.html  LICENSE  Procfile  README.md  conftest.py  docker-compose.yml  index.html  makefile  manage.py  mkdocs.yml  okta_tests  package-lock.json  package.json  pyproject.toml  sitemap.xml  vite.config.js
.copilot/: config.yml  image_build_run.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  e2e.yml
apis/: index.html
apis/basic-profile/: index.html
apis/main/: index.html
apis/people-finder/: index.html
apis/sso-profile/: index.html
apis/user-management/: index.html
config/: __init__.py  api.py  asgi.py  asim_formatter.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  ci.py  developer.py  local.py  prod.py  test.py
core/: admin.py  api.py  middleware.py  models.py  service.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py
core/api/: __init__.py  main.py  people_finder.py  scim.py  sso_profile.py
core/schemas/: peoplefinder.py  profiles.py  scim.py  scim_schema.py
core/services/: core.py  scim.py  user.py  user_service.py
core/templatetags/: vite.py
core/tests/: conftest.py  test_core_service.py  test_imports.py  test_index.py  test_services.py  test_user_service.py
core/utils/: s3_helper.py
data-structures/: index.html
data-structures/profiles/: index.html
data-structures/users/: index.html
data_flow_s3_import/: README.md  ingest.py  models.py  test_e2e.py  test_ingest.py  test_ingest_to_model.py  types.py
data_flow_s3_import/tests/: test_e2e.py  test_ingest.py  test_ingest_to_model.py  utils.py
docker/: .dockerignore  Dockerfile  Dockerfile.localstack  docker-compose.yml
docs/: getting-started.md  index.md  updating-dependencies.md  waf.md
docs/apis/: basic-profile.md  index.md  main.md  people-finder.md  sso-profile.md  user-management.md
docs/data-structures/: index.md  profiles.md  users.md
docs/diagrams/: data-coverage.excalidraw  primary-data-sources-flow.excalidraw  profiles-workflows-edge-cases.excalidraw  service-role.excalidraw  system-architecture.excalidraw  system.excalidraw
e2e_tests/: conftest.py  test_api.py  test_index.py  test_peoplefinder.py  test_scim.py  test_sso_profile.py  test_views.py
frontend/: index.js  styles.scss
getting-started/: index.html
pingdom/: apps.py  services.py  views.py
profile/: models.py
profile/services/: profile.py
profiles/: admin.py  api.py  apps.py  constants.py  exceptions.py  models.py  schema.py  schemas.py  services.py  types.py  utils.py
profiles/fixtures/: countries.json
profiles/migrations/: 0001_initial.py  0002_alter_historicalstaffssoprofile_other_emails_and_more.py  0002_historicaloraclecostcodes_code_and_more.py  0002_historicalpeoplefinderprofile.py  0002_historicalprofile_is_active_profile_is_active.py  0002_initial.py  0003_alter_staffssoprofileemail_unique_together_and_more.py  0004_rename_preferred_email_historicalprofile_primary_email_and_more.py  0005_country.py  0005_country_historicalpeoplefinderteam_and_more.py  0005_peoplefinder_generic_dependencies.py  0006_alter_country_options_grade_keyskill_profession_and_more.py  0006_peoplefinder_models.py  0006_rename_is_active_country_is_not_deleted_upstream_and_more.py  0007_alter_historicalpeoplefinderprofile_additional_roles_and_more.py  0007_grade_profiles_gr_code_e4674a_idx_and_more.py  0007_team_historicalteam.py  0008_alter_historicalpeoplefinderprofile_edited_or_confirmed_at_and_more.py  0008_alter_peoplefinderprofile_options.py  0009_alter_country_end_date_alter_country_overseas_region_and_more.py  0010_alter_historicalpeoplefinderteam_team_type_and_more.py  0011_alter_historicalpeoplefinderprofile_additional_roles_and_more.py  0012_fix_ingest_tables.py  0013_add_root_team_data.py  0014_sectorlist.py
profiles/models/: __init__.py  abstract.py  base_models.py  combined.py  generic.py  models.py  oracle.py  (+3 more)
scim/: api.py  apps.py  schema.py  schemas.py  service.py  services.py
search/: search_index.json
updating-dependancies/: index.html
updating-dependencies/: index.html
user/: admin.py  api.py  backends.py  exceptions.py  managers.py  models.py  services.py  utils.py
(+54 files in other folders)
